--- a/src/component/About/About.css
+++ b/src/component/About/About.css
@@ -63,6 +63,7 @@
     border-radius: 2rem;
     color: var(--color-bg-variant);
     transition: var(--transition);
+    height: 350px;
 }
 
 .profile:hover{
